--- a/oc-qr-code-scanner.html
+++ b/oc-qr-code-scanner.html
@@ -1,9 +1,11 @@
 <link rel="import" href="../polymer/polymer-element.html">
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../polymer-decorators/polymer-decorators.html">
+<link rel="import" href="../app-media/app-media-devices.html">
 <link rel="import" href="../app-media/app-media-stream.html">
+<link rel="import" href="../app-media/app-media-video.html">
+<link rel="import" href="../app-media/app-media-image-capture.html">
+<link rel="import" href="../paper-button/paper-button.html">
 
-<link rel="import" href="qr-core.html">
+<link rel="import" href="jsqr-import.html">
 
 
 <dom-module id="oc-qr-code-scanner">
@@ -15,12 +17,129 @@
         display: block;
       }
     </style>
-    <video id="video" width="300" height="200" style="border: 1px solid gray"></video>
-    <div style="width: 200px; height: 200px; background-color: #0b97c4"></div>
+    <div class="media">
+
+      <app-media-devices
+              id="mediaDevices"
+              devices="{{devices}}"
+              selected-device="{{device}}"
+              kind="videoinput"></app-media-devices>
+
+      <app-media-stream
+              video-device="[[device]]"
+              video-constraints='{"width": {"ideal": 480, "max": 480}, "height": {"ideal": 480, "max": 480}}'
+              stream="{{videoStream}}"
+              active></app-media-stream>
+
+      <div id="videoWindow">
+
+        <app-media-video
+                id="video"
+                source="[[videoStream]]"
+                on-click="record"
+                autoplay
+                muted></app-media-video>
+
+
+        <app-media-image-capture
+                id="imageCapture"
+                stream="[[videoStream]]"
+                focus-mode="single-shot"
+                red-eye-reduction
+                last-photo="{{photo}}">
+        </app-media-image-capture>
+
+        <paper-button on-tap="takePhoto">Take Picture</paper-button>
+
+        <div id="targetSquare"></div>
+
+        <paper-ripple
+                id="ripple"
+                noink></paper-ripple>
+        <template is="dom-if" if="[[!active]]">
+          <div id="buttonRow">
+            <paper-fab icon="granite-qrcode-scanner-icons:photo-camera" on-click="_takePhoto"></paper-fab>
+          </div>
+        </template>
+      </div>
+
+
+    </div>
+    <div>[[data]]</div>
+    <canvas id="c" width=400 height=400></canvas>
 
   </template>
+  <script>
 
-    <script> var exports = {}; </script>
-    <script type="module" src="../../node_modules/jsqr/dist/jsQR.js"></script>
-    <script src="oc-qr-code-scanner.js"></script>
+	  class OcQrCodeScanner extends Polymer.Element {
+
+		  static get is() {
+			  return 'oc-qr-code-scanner';
+		  }
+
+		  static get properties() {
+			  return {
+
+				  visible: {
+					  type: Boolean,
+				  },
+
+				  photo: {
+				  	type: Object,
+                      observer: '_test'
+                  }
+			  }
+		  }
+
+		  ready() {
+			  super.ready();
+		  }
+
+		  takePhoto() {
+			  // NOTE: This method also returns a promise that resolves the photo.
+			  this.$.imageCapture.takePhoto();
+		  }
+
+          convertURIToImageData(URI) {
+			  return new Promise(function(resolve, reject) {
+				  if (URI == null) return reject();
+				  var canvas = document.createElement('canvas'),
+					  context = canvas.getContext('2d'),
+					  image = new Image();
+				  image.addEventListener('load', function() {
+					  canvas.width = image.width;
+					  canvas.height = image.height;
+					  context.drawImage(image, 0, 0, canvas.width, canvas.height);
+					  resolve(context.getImageData(0, 0, canvas.width, canvas.height));
+				  }, false);
+				  image.src = URI;
+			  });
+		  }
+
+		  _test(t, v) {
+			  const imageUrl = URL.createObjectURL(t);
+
+			  this.convertURIToImageData(imageUrl).then((imageData) => {
+				  // Here you can use imageData
+				  this.data = jsQR(imageData.data, imageData.width, imageData.height).data;
+			  });
+		  	const test = "";
+          }
+
+		  _processQrCode() {
+		  	jsQR(data, width, height)
+          }
+
+		  _visibleChanged(visible) {
+			  if (visible) {
+				  this.dispatchEvent(new CustomEvent('change-section', {
+					  bubbles: true, composed: true, detail: {title: 'QR Code'}
+				  }));
+			  }
+		  }
+	  }
+
+	  customElements.define(OcQrCodeScanner.is, OcQrCodeScanner);
+
+  </script>
 </dom-module>
