Add data notify

--- a/oc-qr-code-scanner.html
+++ b/oc-qr-code-scanner.html
@@ -84,7 +84,8 @@
 					},
 					/* If qr code is not decode it will return a null*/
 					data: {
-						type: String
+						type: String,
+						notify: true
 					}
 				}
 			}
