--- a/oc-qr-code-scanner.html
+++ b/oc-qr-code-scanner.html
@@ -59,7 +59,7 @@
             <div class="row">
                 <div class="mx-auto" style="text-align: -webkit-center;">
                     <div style="font-size: 14px; padding-bottom: 30px;" hidden="[[_showCamera]]">Scan QR Code</div>
-                    <paper-fab icon="image:camera-alt" on-click="_takeFrame" style="margin-top: -30px;"></paper-fab>
+                    <paper-fab icon="image:camera-alt" on-tap="_takeFrame" style="margin-top: -30px;"></paper-fab>
                 </div>
             </div>
         </div>
@@ -166,7 +166,7 @@
 			_getVideoConstraints() {
 				return {
 					facingMode: {
-						exact: "environment"
+						facingMode: "environment"
 					},
 					width: {min: 1024, ideal: 1280, max: 1920},
 					height: {min: 776, ideal: 720, max: 1080}
