--- a/oc-qr-code-scanner.html
+++ b/oc-qr-code-scanner.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../polymer/polymer-element.html">
+<script src="../webrtc-adapter/release/adapter.js"></script>
 <link rel="import" href="../app-media/app-media-devices.html">
 <link rel="import" href="../app-media/app-media-stream.html">
 <link rel="import" href="../app-media/app-media-video.html">
@@ -61,9 +62,9 @@
                     noink></paper-ripple>
 
 
-            <div class="row">
+            <div class="row" hidden="[[_showCamera]]">
                 <div class="mx-auto" style="text-align: -webkit-center;">
-                    <div style="font-size: 14px; padding-bottom: 30px;" hidden="[[_showCamera]]">Scan QR Code</div>
+                    <div style="font-size: 14px; padding-bottom: 30px;">Scan QR Code</div>
                     <paper-fab icon="image:camera-alt" on-tap="_takeFrame" style="margin-top: -30px;"></paper-fab>
                 </div>
             </div>
@@ -175,7 +176,8 @@
 			_getVideoConstraints() {
 				return {
 					width: {min: 1024, ideal: 1280, max: 1920},
-					height: {min: 776, ideal: 720, max: 1080}
+					height: {min: 776, ideal: 720, max: 1080},
+                    facingMode: "environment"
 				}
 			}
 
