--- a/oc-qr-code-scanner.html
+++ b/oc-qr-code-scanner.html
@@ -7,6 +7,7 @@
 <link rel="import" href="../paper-button/paper-button.html">
 <link rel="import" href="../paper-fab/paper-fab.html">
 <link rel="import" href="../iron-icons/image-icons.html">
+<link rel="import" href="../../src/oc-button-styles.html">
 
 <link rel="import" href="jsqr-import.html">
 
@@ -15,9 +16,12 @@
     <template>
         <!-- BOOTSTRAP 4 CSS-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-        <style>
+        <style include="oc-button-styles" is="custom-style">
             :host {
                 display: block;
+            }
+            .camera-icon {
+                margin-left:8px;
             }
         </style>
         <app-media-devices
@@ -35,7 +39,7 @@
         <div class="container" hidden="[[!_showCamera]]">
             <div class="row">
                 <div class="mx-auto" style="text-align: -webkit-center;">
-                    <paper-button style="height: 20px; margin-bottom: 10px" raised on-tap="_nextDevice">Switch Camera
+                    <paper-button class="secondary-button"  raised on-tap="_nextDevice">Switch Camera <iron-icon class="camera-icon" icon="image:switch-camera"></iron-icon>
                     </paper-button>
                 </div>
             </div>
@@ -62,11 +66,9 @@
                     id="ripple"
                     noink></paper-ripple>
 
-
             <div class="row" hidden="[[_showCamera]]">
                 <div class="mx-auto" style="text-align: -webkit-center;">
-                    <div style="font-size: 14px; padding-bottom: 30px;">Scan QR Code</div>
-                    <paper-fab icon="image:camera-alt" on-tap="_takeFrame" style="margin-top: -30px;"></paper-fab>
+                    <paper-button class="secondary-button" raised on-tap="_takeFrame">Scan QR Code <iron-icon class="camera-icon" icon="image:photo-camera"></iron-icon></paper-button>
                 </div>
             </div>
         </div>
@@ -74,129 +76,129 @@
     </template>
     <script>
 
-		class OcQrCodeScanner extends Polymer.Element {
+        class OcQrCodeScanner extends Polymer.Element {
 
-			static get is() {
-				return 'oc-qr-code-scanner';
-			}
-
-			static get properties() {
-				return {
-
-					visible: {
-						type: Boolean,
-					},
-
-					_frame: {
-						type: Object,
-						observer: '_onFrameTaken'
-					},
-					/* If qr code is not decode it will return a null*/
-					data: {
-						type: String,
-						notify: true,
-						observer: '_onQrDecoded'
-					},
-					/* Last decoded frame */
-					_lastDataItem: {
-						type: String
-					},
-					/* Just an indication that qr code was found. This will be set to false on each instance*/
-					_qrFound: {
-						type: Boolean,
-						value: false,
-					},
-					_showCamera: {
-						type: Boolean,
-						value: false,
-					},
-				}
-			}
-
-			ready() {
-				super.ready();
-			}
-
-			_onQrDecoded(newVal, oldVal) {
-				if (newVal) {
-					this._qrFound = true;
-					this._showCamera = false;
-				}
-			}
-
-			_frameGrabRepeat() {
-				// This 100 value is relative. THis might change at a later change
-				if (this.time <= 500 && !this._qrFound && this._showCamera) {
-					this.$.imageCapture.grabFrame()
-						.then()
-						.catch(err => console.error('grabFrame() failed: ', err));
-					this.time++;
-				}
-				else {
-					clearInterval(this.interval);
-					this._showCamera = false;
-					this._qrFound = false;
-					this.time = 1;
-				}
+            static get is() {
+                return 'oc-qr-code-scanner';
             }
 
-			_takeFrame() {
-				this._showCamera = true;
+            static get properties() {
+                return {
 
-				this.time = 1;
-				this.interval = setInterval(this._frameGrabRepeat.bind(this), 200);
-			}
+                    visible: {
+                        type: Boolean,
+                    },
 
-			convertURIToImageData(URI) {
-				return new Promise((resolve, reject) => {
-					if (URI == null) return reject();
-					const canvas = document.createElement('canvas');
-					const context = canvas.getContext('2d');
+                    _frame: {
+                        type: Object,
+                        observer: '_onFrameTaken'
+                    },
+                    /* If qr code is not decode it will return a null*/
+                    data: {
+                        type: String,
+                        notify: true,
+                        observer: '_onQrDecoded'
+                    },
+                    /* Last decoded frame */
+                    _lastDataItem: {
+                        type: String
+                    },
+                    /* Just an indication that qr code was found. This will be set to false on each instance*/
+                    _qrFound: {
+                        type: Boolean,
+                        value: false,
+                    },
+                    _showCamera: {
+                        type: Boolean,
+                        value: false,
+                    },
+                }
+            }
 
-					context.drawImage(URI, 0, 0, canvas.width, canvas.height);
-					resolve(context.getImageData(0, 0, canvas.width, canvas.height));
-				});
-			}
+            ready() {
+                super.ready();
+            }
 
-			_onFrameTaken(t) {
-				this.convertURIToImageData(t).then((imageData) => {
-					// Here you can use imageData
-					const qrObject = jsQR(imageData.data, imageData.width, imageData.height);
-					if (qrObject) {
-						this.data = qrObject.data;
+            _onQrDecoded(newVal, oldVal) {
+                if (newVal) {
+                    this._qrFound = true;
+                    this._showCamera = false;
+                }
+            }
 
-						// If new image matches the old image exit and close camara. No need for further scanning
-						if (this.data === this._lastDataItem)
-							this._showCamera = false;
+            _frameGrabRepeat() {
+                // This 100 value is relative. THis might change at a later change
+                if (this.time <= 100 && !this._qrFound && this._showCamera) {
+                    this.$.imageCapture.grabFrame()
+                        .then()
+                        .catch(err => console.error('grabFrame() failed: ', err));
+                    this.time++;
+                }
+                else {
+                    clearInterval(this.interval);
+                    this._showCamera = false;
+                    this._qrFound = false;
+                    this.time = 1;
+                }
+            }
 
-						this._lastDataItem = qrObject.data;
-					}
-				});
-			}
+            _takeFrame() {
+                this._showCamera = true;
 
-			_nextDevice() {
-				this.$.mediaDevices.selectNextDevice()
-			}
+                this.time = 1;
+                this.interval = setInterval(this._frameGrabRepeat.bind(this), 1000);
+            }
 
-			_getVideoConstraints() {
-				return {
-					width: {min: 1024, ideal: 1280, max: 1920},
-					height: {min: 776, ideal: 720, max: 1080},
-					facingMode: "environment"
-				}
-			}
+            convertURIToImageData(URI) {
+                return new Promise((resolve, reject) => {
+                    if (URI == null) return reject();
+                    const canvas = document.createElement('canvas');
+                    const context = canvas.getContext('2d');
+
+                    context.drawImage(URI, 0, 0, canvas.width, canvas.height);
+                    resolve(context.getImageData(0, 0, canvas.width, canvas.height));
+                });
+            }
+
+            _onFrameTaken(t) {
+                this.convertURIToImageData(t).then((imageData) => {
+                    // Here you can use imageData
+                    const qrObject = jsQR(imageData.data, imageData.width, imageData.height);
+                    if (qrObject) {
+                        this.data = qrObject.data;
+
+                        // If new image matches the old image exit and close camara. No need for further scanning
+                        if (this.data === this._lastDataItem)
+                            this._showCamera = false;
+
+                        this._lastDataItem = qrObject.data;
+                    }
+                });
+            }
+
+            _nextDevice() {
+                this.$.mediaDevices.selectNextDevice()
+            }
+
+            _getVideoConstraints() {
+                return {
+                    width: {min: 1024, ideal: 1280, max: 1920},
+                    height: {min: 776, ideal: 720, max: 1080},
+                    facingMode: "environment"
+                }
+            }
 
 
-			_visibleChanged(visible) {
-				if (visible) {
-					this.dispatchEvent(new CustomEvent('change-section', {
-						bubbles: true, composed: true, detail: {title: 'QR Code'}
-					}));
-				}
-			}
-		}
+            _visibleChanged(visible) {
+                if (visible) {
+                    this.dispatchEvent(new CustomEvent('change-section', {
+                        bubbles: true, composed: true, detail: {title: 'QR Code'}
+                    }));
+                }
+            }
+        }
 
-		customElements.define(OcQrCodeScanner.is, OcQrCodeScanner);
+        customElements.define(OcQrCodeScanner.is, OcQrCodeScanner);
 
     </script>
 </dom-module>
