--- a/oc-qr-code-scanner.html
+++ b/oc-qr-code-scanner.html
@@ -171,8 +171,8 @@
 			_calculateStyling() {
 				/* Style the camera so it is full screen on mobile*/
 				this.$.container.setAttribute("style", "top:" + (this.offsetTop + this.$.buttonsContainer.offsetHeight) + "px;" +
-					"height:" + (window.outerHeight - this.offsetTop - this.$.buttonsContainer.offsetHeight) + "px;" +
-					"width:" + window.outerWidth + "px");
+					"height:" + (window.innerHeight - this.offsetTop - this.$.buttonsContainer.offsetHeight) + "px;" +
+					"width:" + window.innerWidth + "px");
 
 				/* Style the target square to be within the video*/
 				this.$.targetSquare.setAttribute("style", "left:" + (this.$.video.offsetLeft + 60) + "px;" +
