--- a/oc-qr-code-scanner.html
+++ b/oc-qr-code-scanner.html
@@ -50,16 +50,15 @@
                 stream="{{videoStream}}"
                 active></app-media-stream>
 
-
         <div id="buttonsContainer" hidden="[[!_showCamera]]">
-            <div class="row mx-auto justify-content-between" style="text-align: -webkit-center;">
-                <div class="col-1">
+            <div class="row" style="text-align: -webkit-center;">
+                <div class="col-8">
                     <paper-button class="secondary-button" raised on-tap="_exitCamera">
-                        <iron-icon icon="image:icons:close"></iron-icon>
+                        Enter Shop Code
                     </paper-button>
                 </div>
-                <div class="col-8">
-                    <paper-button class="secondary-button" raised on-tap="_nextDevice">Switch Camera
+                <div class="col-1">
+                    <paper-button class="secondary-button" raised on-tap="_nextDevice">
                         <iron-icon class="camera-icon" icon="image:switch-camera"></iron-icon>
                     </paper-button>
                 </div>
@@ -84,8 +83,17 @@
             <div id="targetSquare" class="targetSquare"></div>
         </div>
 
-        <div>
 
+
+        <div hidden="[[!_showCamera]]">
+            <div class="row mx-auto justify-content-between" style="text-align: -webkit-center;">
+                <div class="col-12">
+                    <paper-button class="secondary-button" raised on-tap="_nextDevice">Enter Shop Code
+                    </paper-button>
+                </div>
+            </div>
+        </div>
+        <div>
             <paper-ripple
                     id="ripple"
                     noink></paper-ripple>
