--- a/oc-qr-code-scanner.html
+++ b/oc-qr-code-scanner.html
@@ -50,7 +50,7 @@
                 stream="{{videoStream}}"
                 active></app-media-stream>
 
-        <div id="buttonsContainer" hidden="[[!_showCamera]]">
+        <div id="buttonsContainer" hidden$="{{!showCamera}}">
             <div class="row" style="text-align: -webkit-center;">
                 <div class="col-8">
                     <paper-button class="secondary-button" raised on-tap="_exitCamera">
@@ -65,7 +65,7 @@
             </div>
         </div>
 
-        <div id="container" class="container" hidden="[[!_showCamera]]">
+        <div id="container" class="container" hidden$="{{!showCamera}}" >
             <app-media-video
                     id="video"
                     source="[[videoStream]]"
@@ -87,7 +87,7 @@
                     id="ripple"
                     noink></paper-ripple>
 
-            <div class="row" hidden="[[_showCamera]]">
+            <div class="row" hidden$="{{showCamera}}">
                 <div class="mx-auto" style="text-align: -webkit-center;">
                     <paper-button class="secondary-button" raised on-tap="_takeFrame">Scan QR Code
                         <iron-icon class="camera-icon" icon="image:photo-camera"></iron-icon>
@@ -131,9 +131,10 @@
 						type: Boolean,
 						value: false,
 					},
-					_showCamera: {
+					showCamera: {
 						type: Boolean,
 						value: false,
+						notify: true
 					},
 				}
 			}
@@ -146,13 +147,13 @@
 			_onQrDecoded(newVal, oldVal) {
 				if (newVal) {
 					this._qrFound = true;
-					this._showCamera = false;
+					this.showCamera = false;
 				}
 			}
 
 			_frameGrabRepeat() {
 				// This 100 value is relative. THis might change at a later change
-				if (this.time <= 100 && !this._qrFound && this._showCamera) {
+				if (this.time <= 100 && !this._qrFound && this.showCamera) {
 					this.$.imageCapture.grabFrame()
 						.then()
 						.catch(err => console.error('grabFrame() failed: ', err));
@@ -160,7 +161,7 @@
 				}
 				else {
 					clearInterval(this.interval);
-					this._showCamera = false;
+					this.showCamera = false;
 					this._qrFound = false;
 					this.time = 1;
 				}
@@ -182,7 +183,7 @@
 			_takeFrame() {
 				/* Timeout hack for some keyboard that close very slow, and influence the viewport of the camera*/
 				Polymer.Async.timeOut.run(() => {
-					this._showCamera = true;
+					this.showCamera = true;
 
 					this._calculateStyling();
 
@@ -211,7 +212,7 @@
 
 						// If new image matches the old image exit and close camara. No need for further scanning
 						if (this.data === this._lastDataItem)
-							this._showCamera = false;
+							this.showCamera = false;
 
 						this._lastDataItem = qrObject.data;
 					}
@@ -219,7 +220,7 @@
 			}
 
 			_exitCamera() {
-				this._showCamera = false;
+				this.showCamera = false;
 			}
 
 			_nextDevice() {
